# xinu

./: .editorconfig  README.md  cabal.haskell-ci  cabal.project  xinu.cabal
.github/workflows/: haskell-ci-autoreconf.patch  haskell-ci.yml
xinu/: CHANGELOG.md  xinu.cabal  xinu.h
xinu-ffi/: .gitignore  configure.ac  xinu-ffi.cabal  xinu-ffi.h
xinu-ffi/src/System/Xinu/: FFI.hs
xinu-ffi/src/System/Xinu/IO/: FFI.hsc
xinu/internal/xinu-internal-abstract/System/Xinu/: Path.hsig
xinu/internal/xinu-internal-abstract/System/Xinu/IO/: Abstract.hs
xinu/internal/xinu-internal/System/Xinu/: Error.hs
xinu/internal/xinu-internal/System/Xinu/Path/: ByteString.hs  FilePath.hs
xinu/src/System/Xinu/: IO.hs
xinu/test/: xinu-test.hs
