Cabal-Version:       2.2

Name:                xinu
Version:             0.1.0.0
Synopsis:            An experimental unix package for Haskell
Homepage:            https://github.com/NicolasT/xinu
License:             BSD-3-Clause
License-File:        LICENSE
Author:              Nicolas Trangez
Maintainer:          ikke@nicolast.be
Category:            System
Extra-Source-Files:  CHANGELOG.md, README.md

Library
  Exposed-Modules:     MyLib
  Build-Depends:       base ^>=4.14.2.0
  Hs-Source-Dirs:      src
  Default-Language:    Haskell2010
